fix(style): footer spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,5 @@
 .footer {
-  color: var(--white);
-  background-color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .link {
